# April-Tag-Based-Docking-Using-nav2

./: README.md
my_docking_pkg/: CMakeLists.txt  package.xml
my_docking_pkg/config/: apriltags_36h11.yaml
my_docking_pkg/launch/: apriltag_dock_pose_publisher.launch.py  apriltag_tf_publisher.launch.py
my_docking_pkg/scripts/: dock.py
my_docking_pkg/src/: detected_dock_pose_publisher.cpp
my_package/launch/: world_launch.py
my_package/worlds/: idkworld.world
nav2_pkg/launch/: nav2_launch.py
nav2_pkg/maps/: map.data  map.pgm  map.yaml
nav2_pkg/params/: nav2_params.yaml
nav2_pkg/scripts/: waypoint_follower.py
